vmod: Add coverage for symbol conflicts
It should be mitigated by the -export-symbols-regex linker flag, but we
can ensure this with a test case.

--- a/vmod/automake_boilerplate_debug.am
+++ b/vmod/automake_boilerplate_debug.am
@@ -6,7 +6,8 @@ libvmod_debug_la_SOURCES = \
 	vmod_debug.c \
 	vmod_debug_acl.c \
 	vmod_debug_dyn.c \
-	vmod_debug_obj.c
+	vmod_debug_obj.c \
+	vmod_debug_version.c
 
 libvmod_debug_la_CFLAGS =
 
